--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,8 @@
               "allowExpressions": true
             }
         ],
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "class-methods-use-this": "off"
     },
     "settings": {
         "import/resolver": {
