fix: Node version and tsconfig casing error

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "engines": {
-    "node": "12.x"
+    "node": "14.15.X"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
