--- a/tsconfig.json
+++ b/tsconfig.json
@@ -66,5 +66,11 @@
     /* Advanced Options */
     "skipLibCheck": true,                     /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": false  /* Disallow inconsistently-cased references to the same file. */
-  }
+  },
+  "include" : [
+    "src/**/*.ts"
+    ],
+    "exclude" : [
+        "node_modules"
+    ]
 }
